# APITest

./: .gitignore  CMakeLists.txt  Main.qml  icon.qrc  main.cpp
Components/: CustomButton.qml  CustomMenuBar.qml
Page/: PageConnect.qml  PageIORegister.qml  PageMonitor.qml  PageMove.qml  PageSerial.qml  PageUserManual.qml  PageVariable.qml
src/: Robotclient.cpp  Robotclient.h  serialclient.cpp  serialclient.h
